@@ -1,2 +1,3 @@
-from connection import Connection
-from exception import GoogleClientError
+from eea.google.api.connection import Connection
+from eea.google.api.exception import GoogleClientError
+Connection, GoogleClientError # pyflakes 
